- Added option for range indicator on mainbar
- Added option to show player health as %, value or both
- Dodge bar now works as a secure button and can be bound to a key
- Rebuilt dodge bar for performance and graphical improvement
- Rebuilt health globe for performance and graphical improvement
- Added extra manabar for druids in shapeshift form (testing)
- Add ability to bind Keys by hover

1.7.3
- Added more stats to the extended stats (hover over the 'Attribute'-label)

1.7.2
- Now the correct resistence will be shown for player and pet
- Advanced char stats: Redo MP5, now split into Item, Casting, Spirit
- Fix an overlapping error with health on the healthglobe
- Added option to set Actionbar fade per Actionbar (Show always, show in combat, show only on mouse over)
- Added option to show target auras on top
- Make PlayerAuraFrame moveable

1.7.1
- Fix a lua error when hover the micromenu
- Update libs
- Added X and Y offset for tooltip if anchor is set to cursor
- Added durability icon to char stats
- Added healthprediction to party, target and target of target frame
- Added healthprediction to healthglobe

1.7.0
- Fix a bug which causes a conflict with other addons

1.6.9
- Added sorting to bags and bank
    - Also for bags the option to sort to first or last bag (cogwheel at the bag; counts for bag and bank)
- Added option the set the Stancebar to the left or right of the Actionbar
- Fix short freeze when open bag or bank
- Added "Total DPS" into the Damage stats tooltip
- If minimap is on top now all icons on the minimap are accessable
- Settings: Checkboxes now also toggle if click on the text

1.6.8
- Fix lua error in BG's for level 60 chars

1.6.7
- Redo Inventory to work with the keyring

1.6.6
- Fix a bug in bankframes

1.6.5
- Added Keyring

1.6.4
- Update libs
- Error if acception an PvP invite: Workaround: If the invite pops up type /reload then you can accept the invite
- Added BG queue icon

1.6.3
- Fix lua error for druids

1.6.2