@@ -8,6 +8,7 @@
 - Rebuilt health globe for performance and graphical improvement
 - Added extra manabar for druids in shapeshift form (testing)
 - Add ability to bind Keys by hover
+- Added HUD Scale option as a slider
 
 1.7.3
 - Added more stats to the extended stats (hover over the 'Attribute'-label)
